Fix the alert layout and add more padding to the scrollbars to hide them better

--- a/src/documents/guideguide/css/_base.scss
+++ b/src/documents/guideguide/css/_base.scss
@@ -68,7 +68,7 @@ a {
 .scroll-content {
   overflow: auto;
   width: 100%;
-  padding-right: 20px;
+  padding-right: 50px;
 }
 
 table {
@@ -223,17 +223,18 @@ table {
   z-index: 21;
 
   .alert-body {
-    padding: 20px 20px 70px;
     font-size: 13px;
     line-height: 21px;
     position: absolute;
     bottom: 0;
-    width: 100%;
-    height:75%;
+    top: 0;
+    left: 0;
+    right: 0;
   }
 
   .alert-content {
-    overflow: auto;
+    margin: 20px;
+    overflow: hidden;
   }
 
   .alert-title {
@@ -243,7 +244,16 @@ table {
 
   .button-group {
     position: absolute;
-    bottom: 20px;
+    bottom: 0;
+  }
+
+  .scroll-outer {
+    margin-bottom: 41px;
+    overflow: scroll;
+  }
+
+  .scrollbar {
+    margin-bottom: 41px;
   }
 
   #guideguide.has-alert & { display: block; }
