--- a/src/documents/guideguide/css/_mixins.scss
+++ b/src/documents/guideguide/css/_mixins.scss
@@ -114,8 +114,5 @@ $sansSerif: Verdana, "Helvetica Neue", Helvetica, Arial, sans-serif;
 
   .alert-body {
     background-color: $background;
-    border-top: 2px solid $darker;
-
-
   }
 }
